syntax = "proto3";

import "auth/user_token.proto";

package profile;

service ProfileService {
    rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
    rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
}

message GetProfileRequest {
    userToken.User user = 1;
}

message GetProfileResponse {
    string email = 1;
    int32 role = 2;
    string username = 3;
    string domain = 4;
    string phone = 5;
    string address = 6;
    string name = 7;
    string gender = 8;
    int32 age = 9;
}

message UpdateProfileRequest {
    userToken.User user = 1;
    optional string username = 2;
    optional string phone = 3;
    optional string address = 4;
    optional string name = 5;
    optional string gender = 6;
    optional int32 age = 7;
}

message UpdateProfileResponse {
    string result = 1;
}
